# space-invaders

./: CMakeLists.txt  CMakePresets.json  main.cpp
Objects/: Bullet.cpp  Bullet.hpp
engine/: Collider.cpp  Collider.hpp  Empty.cpp  Empty.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp
